Se verifica la relacion con los modelos @OneToOne eliminado de los models

--- a/Rapidpago/pom.xml
+++ b/Rapidpago/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.rapidpago</groupId>
 	<artifactId>Rapidpago</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+<!--<version>0.0.1-SNAPSHOT</version>-->
 	<name>Rapidpago</name>
 	<description>Proyecto de ensayo con Datatables.</description>
 
